Fix station wrap

--- a/template_pr.css
+++ b/template_pr.css
@@ -48,7 +48,7 @@ img {
 .stop_name.wrap:not(.side){
     text-indent: -0.9em;
     margin-bottom: 0.8em;
-    height: 17.5ch;
+    height: 17.2ch;
 }
 
 .stop_name {
